[package]
name = "hello-wasm"
version = "0.1.1"
edition = "2022"
authors = ["Alexander Bär <baer.elektro@web.de"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/baerelektro/hello-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
